# mcp-fs-server

./: .gitignore  .kilocodemodes  .repomixignore  .roomodes  ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  CHANGES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DI_ARCHITECTURE_ANALYSIS.md  FIXES_IMPLEMENTED.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  LICENSE.md  POSTHOG_SETUP.md  README.md  TESTING_RECOMMENDATIONS.md  audit-report.md  fix-plan.md  fix.md  instruction.md  memory-store.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix-output.md  repomix.config.json  test-remote-fs.cjs  tsconfig.json  vitest.config.ts
.qdrant/: configuration.json
.repomix/: bundles.json
.roo/: mcp.json
extension/: .gitignore  .vscodeignore  BUILD_SETUP.md  LICENSE.md  POC_TESTING.md  components.json  eslint.config.mjs  idea.md  manual_build.ps1  manual_build.sh  package-lock.json  package.json  svelte.config.js  tailwind.config.js  test-output.txt  test-setup-context.md  test.txt  tree.txt  tsconfig.json  vite.config.js  vite.config.js.map  vite.config.ts  vitest.config.ts
extension/rust/clipboard-files/: Cargo.toml
extension/rust/clipboard-files/src/: main.rs
extension/rust/clipboard-monitor/: Cargo.toml
extension/rust/clipboard-monitor/src/: main.rs  protocol.rs
extension/rust/clipboard-monitor/tests/: integration.rs
prompts/: system-instructions.md
scripts/: deploy.cjs  setup-resources.js  setup-wasm.cjs  test-parser.cjs  test-parser.js  wasm-installer.js
src/: analytics.ts  index.test.ts  index.ts
(+124 files in other folders)
