[package]
name = "clipboard-files"
version = "0.1.0"
edition = "2021"
authors = ["<your-name>"]
description = "Cross-platform file clipboard helper for VS Code extension"
license = "MIT"

[dependencies]
arboard = "3.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "clipboard-files"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

