[package]
name = "clipboard-monitor"
version = "0.1.0"
edition = "2021"
authors = ["<your-name>"]
description = "Clipboard monitor for VS Code extension"
license = "MIT"
 
[dependencies]
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"
once_cell = "1.21.3"
 
[[bin]]
name = "clipboard-monitor"
path = "src/main.rs"
 
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
